--- a/indexs.html
+++ b/indexs.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Pilgrim Bank - Forex Trading</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="indexs" href="indexs.html">
+    <link rel="index" href="index.html">
+    <link rel="indexr" href="indexr.html">
     <link rel="stylesheet" href="forex.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
@@ -23,7 +26,7 @@
                     <span>|</span>
                     <span>Server: Global-Pilgrim-Live</span>
                 </div>
-                <button onclick="window.location.href='../../index.html'" class="btn-secondary">Back to Admin</button>
+                <button onclick="window.location.href='index.html'" class="btn-secondary">Back to Admin</button>
             </div>
         </header>
 
